AC_INIT(configure.in)

AC_CHECK_TYPE(uintptr_t, unsigned long)

if test $ac_cv_type_uintptr_t = yes
then
  AC_DEFINE(HAVE_UINTPTR_T, 1, [Define if you have the \`uintptr_t' type.])
fi

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(eqtl_arc, 0.1)

AC_LANG_CPLUSPLUS
AC_PROG_CXX
AM_PROG_LIBTOOL

PKG_CHECK_MODULES(LIBXML, libxml-2.0 glibmm-2.4)
AC_SUBST(LIBXML_CFLAGS)
AC_SUBST(LIBXML_LIBS)

AC_OUTPUT(Makefile)

